--- a/UniversalOCR/Views/Home/Index.cshtml
+++ b/UniversalOCR/Views/Home/Index.cshtml
@@ -31,3 +31,7 @@
 
 
 <p>Supported Formats: .txt .pdf .doc .docx .xls .xlsx .ppt pptx .rtf .bmp .png .png .jfif .jpeg .tiff</p>
+<br />
+<br />
+<br />
+<a href="https://github.com/gxsham/UniversalOCR-Api">Github</a>
