--- a/UniversalOCR/Views/Home/Index.cshtml
+++ b/UniversalOCR/Views/Home/Index.cshtml
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="~/css/dropdown.css" />
     <script src="~/js/upload2.js"></script>
     <script src="~/js/dropdown.js"></script>
+
 </head>
 
 
@@ -34,4 +35,13 @@
 <br />
 <br />
 <br />
-<a href="https://github.com/gxsham/UniversalOCR-Api">Github</a>
+
+<div>
+    
+    <a href="https://github.com/gxsham/UniversalOCR" style="text-decoration:none">
+        <img src="~/images/GitHub-Mark-Light-32px.png" style="margin-left:45%"/>
+        <br />
+        <p style="margin-left:16%; color:darkslategray">Source Code and API description</p>
+    </a>
+    <br />
+</div>
